# backend/controllers/taskController.js
@@ -1,131 +1,0 @@
-
-const Task = require('../models/Task');
-const { validationResult } = require('express-validator');
-
-// @desc    Get all tasks for a user
-// @route   GET /api/tasks
-// @access  Private
-const getTasks = async (req, res, next) => {
-  try {
-    const tasks = await Task.find({ user: req.user.id }).sort({ createdAt: -1 });
-    res.json(tasks);
-  } catch (error) {
-    next(error);
-  }
-};
-
-// @desc    Get single task by ID
-// @route   GET /api/tasks/:id
-// @access  Private
-const getTaskById = async (req, res, next) => {
-    try {
-        const task = await Task.findById(req.params.id);
-
-        if (!task) {
-            res.status(404);
-            throw new Error('Task not found');
-        }
-
-        // Make sure the logged in user matches the task user
-        if (task.user.toString() !== req.user.id) {
-            res.status(401);
-            throw new Error('User not authorized');
-        }
-
-        res.json(task);
-    } catch (error) {
-        next(error);
-    }
-};
-
-// @desc    Create a new task
-// @route   POST /api/tasks
-// @access  Private
-const createTask = async (req, res, next) => {
-  const errors = validationResult(req);
-  if (!errors.isEmpty()) {
-    return res.status(400).json({ errors: errors.array() });
-  }
-
-  const { title, description, status, dueDate } = req.body;
-
-  try {
-    const task = new Task({
-      user: req.user.id,
-      title,
-      description,
-      status,
-      dueDate,
-    });
-
-    const createdTask = await task.save();
-    res.status(201).json(createdTask);
-  } catch (error) {
-    next(error);
-  }
-};
-
-// @desc    Update a task
-// @route   PUT /api/tasks/:id
-// @access  Private
-const updateTask = async (req, res, next) => {
-  const errors = validationResult(req);
-  if (!errors.isEmpty()) {
-    return res.status(400).json({ errors: errors.array() });
-  }
-
-  try {
-    let task = await Task.findById(req.params.id);
-
-    if (!task) {
-      res.status(404);
-      throw new Error('Task not found');
-    }
-
-    // Make sure the logged in user matches the task user
-    if (task.user.toString() !== req.user.id) {
-      res.status(401);
-      throw new Error('User not authorized');
-    }
-    
-    task = await Task.findByIdAndUpdate(req.params.id, req.body, { new: true, runValidators: true });
-
-    res.json(task);
-  } catch (error) {
-    next(error);
-  }
-};
-
-// @desc    Delete a task
-// @route   DELETE /api/tasks/:id
-// @access  Private
-const deleteTask = async (req, res, next) => {
-  try {
-    const task = await Task.findById(req.params.id);
-
-    if (!task) {
-      res.status(404);
-      throw new Error('Task not found');
-    }
-
-    // Make sure the logged in user matches the task user
-    if (task.user.toString() !== req.user.id) {
-      res.status(401);
-      throw new Error('User not authorized');
-    }
-
-    await task.deleteOne();
-
-    res.json({ message: 'Task removed' });
-  } catch (error) {
-    next(error);
-  }
-};
-
-module.exports = {
-  getTasks,
-  getTaskById,
-  createTask,
-  updateTask,
-  deleteTask,
-};
