# backend/models/Task.js
@@ -1,35 +1,0 @@
-
-const mongoose = require('mongoose');
-
-const taskSchema = new mongoose.Schema({
-  user: {
-    type: mongoose.Schema.Types.ObjectId,
-    required: true,
-    ref: 'User',
-  },
-  title: {
-    type: String,
-    required: [true, 'Please add a title'],
-    trim: true,
-  },
-  description: {
-    type: String,
-    required: false,
-  },
-  status: {
-    type: String,
-    required: true,
-    enum: ['pending', 'in-progress', 'completed'],
-    default: 'pending',
-  },
-  dueDate: {
-    type: Date,
-    required: false,
-  },
-}, {
-  timestamps: true,
-});
-
-const Task = mongoose.model('Task', taskSchema);
-
-module.exports = Task;
